# eventivize-faucet

./: Cargo.toml  config.yaml  dropevent.yaml
src/: main.rs
